# Calliope

./: .gitignore  CLAUDE.md  README.md
.claude/: settings.json  settings.local.json
android/: CLAUDE.md
api/: .env.example  CLAUDE.md  go.mod  go.sum
api/migrations/: 000001_create_users.up.sql  000002_create_tasks.up.sql  000003_create_works.up.sql  000004_create_credits.up.sql  000005_create_login_attempts.up.sql
articles/: A-01-system-architecture-design.md  A-02-redis-stream-vs-kafka.md
docker/: docker-compose.yml
docs/: claude-best-practices.md  project-plan.md
docs/adr/: ADR-001-go-api-layer.md  ADR-002-mysql.md  ADR-003-redis-stream-queue.md  ADR-004-autodl-gpu.md
docs/architecture/: api-spec.yaml  client-android.md  client-h5.md  client-ios.md  client-sdk-spec.md  database-schema.md  system-overview.md  (+1 more)
h5/: CLAUDE.md
inference/: .env.example  CLAUDE.md  pyproject.toml  requirements-dev.txt  requirements-gpu.txt  requirements.txt
inference/app/: config.py  exceptions.py  main.py
inference/app/api/v1/: health.py
inference/app/infra/: callback_client.py  redis_client.py  storage.py
inference/app/models/: schemas.py
inference/app/services/: inference.py  musicgen_service.py  siliconflow_service.py
inference/app/worker/: task_worker.py
inference/tests/: conftest.py
inference/tests/integration/: test_worker_redis.py
inference/tests/unit/: test_callback_client.py  test_health.py  test_inference_service.py  test_main.py  test_musicgen_service.py  test_siliconflow_service.py  test_storage_client.py  test_task_worker.py
ios/: CLAUDE.md
(+50 files in other folders)
